todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: public-assets
          persistentVolumeClaim:
            claimName: todo-app-assets-pv-claim
      containers:
        - name: todo-app
          image: tomaspedroso/todo-app
          volumeMounts:
            - name: public-assets
              mountPath: /app/public/assets
