todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 1002
      protocol: TCP
      targetPort: 3000
